# OrangeAgent

./: .env  .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  main.py  orange_mcp.py  pyproject.toml
.duckagent/: messages.db
data/: sample_trace.txt
data/skills/: bypass-ssl-pinning.yaml  vmp-dump-assist.yaml
data/skills/algorithm-recovery/: SKILL.md  skill.json
data/skills/bypass-ssl-pinning/: SKILL.md  skill.json
data/skills/discovery-loop/: SKILL.md  skill.json
data/skills/packer-identification/: SKILL.md  skill.json
data/skills/signature-analysis/: SKILL.md  skill.json
data/skills/vmp-dump-assist/: SKILL.md  skill.json
docs/superpowers/plans/: 2026-06-01-phase1-implementation.md  2026-06-01-textual-tui.md
docs/superpowers/specs/: 2026-06-01-phase1-design.md  2026-06-01-textual-tui-design.md
prompts/: apktool_agent.md  frida_agent.md  ida_agent.md  ida_jadx_agent.md  js_reverse_agent.md  main_agent.md  network_agent.md  trace_agent.md  unidbg_agent.md
src/duckagent/: config.py  launcher.py
src/duckagent/agents/: __init__.py  base.py  ida_jadx_agent.py  main_agent.py  trace_agent.py
src/duckagent/bus/: __init__.py  (+3 more)
src/orangeagent/: __init__.py  config.py  launcher.py
tests/: test_agents.py  test_bus.py  test_cli.py  test_dispatcher.py  test_http_bus.py  test_integration.py  test_new_components.py  test_runtime_advanced.py  test_runtime_durable.py  test_runtime_enhancements.py  test_runtime_eval.py  test_runtime_hardening.py  test_runtime_http.py  test_runtime_maturity.py  test_runtime_memory.py  test_runtime_regressions.py  test_server.py  test_tui_widgets.py  test_verify.py
tools/search/: Makefile  ak_search  search.c
(+76 files in other folders)
