[project]
name = "duckagent"
version = "0.1.0"
description = "Android reverse engineering multi-agent system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.14.1",
]

[project.scripts]
duck = "duckagent.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
