[project]
name = "orangeagent"
version = "0.1.0"
description = "Android reverse engineering multi-agent system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.14.1",
    "textual>=3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "mcp[cli]",
    "fastmcp>=3.0.2",
]

[project.scripts]
orange = "orangeagent.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orangeagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
